fixed profile footer alignment

--- a/public/static/css/footer.css
+++ b/public/static/css/footer.css
@@ -21,7 +21,6 @@
 
 .footer-logo {
   height: 40px;
-  margin-right: 10px;
 }
 
 .footer-name {
