--- a/public/static/css/global.css
+++ b/public/static/css/global.css
@@ -45,7 +45,7 @@ body {
 }
 
 .main-content {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .circle {
